[gd_scene load_steps=13 format=3 uid="uid://f4ifidduagrk"]

[ext_resource type="Script" uid="uid://bcvfxng51m4ix" path="res://Scenes/player_setup.gd" id="1_2u5be"]
[ext_resource type="FontFile" uid="uid://b23yltayewnmu" path="res://Fonts/Russo_One.ttf" id="1_heq8j"]
[ext_resource type="StyleBox" uid="uid://d1xej10rxil7t" path="res://Themes/ENTERNAME.tres" id="2_e3k3s"]
[ext_resource type="Theme" uid="uid://hfoalgua28li" path="res://Themes/ui_settings_card.tres" id="4_r2h62"]
[ext_resource type="Texture2D" uid="uid://bkfauhcg43i3h" path="res://Icons/arrow-right (2).png" id="5_87ney"]
[ext_resource type="Theme" uid="uid://cv31prkpacm5t" path="res://Themes/Mbutton.tres" id="5_ltgrd"]
[ext_resource type="Theme" uid="uid://bxhjmt7by7tw" path="res://Themes/Fbutton.tres" id="6_8hh1o"]
[ext_resource type="AudioStream" uid="uid://lyhht1a5m7r7" path="res://Audio/u4.mp3" id="8_s3cmf"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_e2830"]
bg_color = Color(0.0745098, 0.0745098, 0.0745098, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_heq8j"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_uor5d"]
bg_color = Color(0.165657, 0.165656, 0.165656, 1)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color(0.164706, 0.164706, 0.164706, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_j0tcy"]
bg_color = Color(0.0562915, 0.0562916, 0.0562915, 1)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color(0.054902, 0.054902, 0.054902, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8
shadow_color = Color(0, 0, 0, 1)

[node name="PlayerSetup" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_2u5be")

[node name="Background" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_e2830")

[node name="MarginContainer" type="MarginContainer" parent="Background"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 64
theme_override_constants/margin_top = 64
theme_override_constants/margin_right = 64
theme_override_constants/margin_bottom = 64

[node name="VBoxContainer" type="VBoxContainer" parent="Background/MarginContainer"]
layout_mode = 2

[node name="Spacer" type="HBoxContainer" parent="Background/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2

[node name="NameRow" type="HBoxContainer" parent="Background/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 200)
layout_mode = 2

[node name="Spacer" type="Control" parent="Background/MarginContainer/VBoxContainer/NameRow"]
custom_minimum_size = Vector2(500, 0)
layout_mode = 2

[node name="EnterName" type="LineEdit" parent="Background/MarginContainer/VBoxContainer/NameRow"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("1_heq8j")
theme_override_font_sizes/font_size = 77
theme_override_styles/focus = SubResource("StyleBoxEmpty_heq8j")
theme_override_styles/normal = ExtResource("2_e3k3s")
placeholder_text = "Enter your name"
alignment = 1

[node name="Spacer2" type="Control" parent="Background/MarginContainer/VBoxContainer/NameRow"]
custom_minimum_size = Vector2(500, 0)
layout_mode = 2

[node name="Spacer2" type="HBoxContainer" parent="Background/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2

[node name="PanelContainer" type="PanelContainer" parent="Background/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme = ExtResource("4_r2h62")

[node name="VBoxContainer" type="VBoxContainer" parent="Background/MarginContainer/VBoxContainer/PanelContainer"]
custom_minimum_size = Vector2(710, 0)
layout_mode = 2

[node name="LabelRow" type="HBoxContainer" parent="Background/MarginContainer/VBoxContainer/PanelContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 200)
layout_mode = 2
size_flags_horizontal = 4

[node name="Label" type="Label" parent="Background/MarginContainer/VBoxContainer/PanelContainer/VBoxContainer/LabelRow"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("1_heq8j")
theme_override_font_sizes/font_size = 77
text = "Gender"
horizontal_alignment = 1

[node name="ButtonRow" type="HBoxContainer" parent="Background/MarginContainer/VBoxContainer/PanelContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 200)
layout_mode = 2

[node name="Spacer" type="Control" parent="Background/MarginContainer/VBoxContainer/PanelContainer/VBoxContainer/ButtonRow"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2

[node name="Male" type="Button" parent="Background/MarginContainer/VBoxContainer/PanelContainer/VBoxContainer/ButtonRow"]
custom_minimum_size = Vector2(210, 0)
layout_mode = 2
theme = ExtResource("5_ltgrd")
toggle_mode = true

[node name="Spacer2" type="Control" parent="Background/MarginContainer/VBoxContainer/PanelContainer/VBoxContainer/ButtonRow"]
custom_minimum_size = Vector2(70, 0)
layout_mode = 2

[node name="Female" type="Button" parent="Background/MarginContainer/VBoxContainer/PanelContainer/VBoxContainer/ButtonRow"]
custom_minimum_size = Vector2(210, 0)
layout_mode = 2
size_flags_horizontal = 0
theme = ExtResource("6_8hh1o")
toggle_mode = true

[node name="Spacer3" type="Control" parent="Background/MarginContainer/VBoxContainer/PanelContainer/VBoxContainer/ButtonRow"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2

[node name="Spacer3" type="HBoxContainer" parent="Background/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2

[node name="ContinueRow" type="HBoxContainer" parent="Background/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Spacer" type="Control" parent="Background/MarginContainer/VBoxContainer/ContinueRow"]
custom_minimum_size = Vector2(705, 0)
layout_mode = 2

[node name="NEXT" type="Button" parent="Background/MarginContainer/VBoxContainer/ContinueRow"]
z_index = 2
custom_minimum_size = Vector2(350, 100)
layout_direction = 3
layout_mode = 2
focus_mode = 0
theme_override_styles/hover = SubResource("StyleBoxFlat_uor5d")
theme_override_styles/pressed = SubResource("StyleBoxFlat_j0tcy")
theme_override_styles/normal = SubResource("StyleBoxFlat_j0tcy")
icon = ExtResource("5_87ney")
icon_alignment = 1
expand_icon = true

[node name="Spacer2" type="Control" parent="Background/MarginContainer/VBoxContainer/ContinueRow"]
layout_mode = 2
size_flags_horizontal = 3

[node name="ClickSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("8_s3cmf")
volume_db = -2.0
